--- a/action.yaml
+++ b/action.yaml
@@ -11,20 +11,20 @@ runs:
     - run: mkdir -p ${{ runner.temp }}/build2-build
       shell: bash
       
-    - run: curl -sSfO https://download.build2.org/${{ input.build2-version }}/build2-install-${{ input.build2-version }}.sh
+    - run: curl -sSfO https://download.build2.org/${{ inputs.build2-version }}/build2-install-${{ inputs.build2-version }}.sh
       shell: bash
       working-directory: ${{ runner.temp }}/build2-build
       if: ${{ runner.os != 'Windows' }}
-    - run: sudo sh build2-install-${{ build2-version }}.sh --yes
+    - run: sudo sh build2-install-${{ inputs.build2-version }}.sh --yes
       shell: bash
       working-directory: ${{ runner.temp }}/build2-build
       if: ${{ runner.os != 'Windows' }}
     
-    - run: curl -sSfO https://download.build2.org/${{ input.build2-version }}/build2-install-msvc-${{ input.build2-version }}.bat
+    - run: curl -sSfO https://download.build2.org/${{ inputs.build2-version }}/build2-install-msvc-${{ inputs.build2-version }}.bat
       shell: bash
       working-directory: ${{ runner.temp }}/build2-build
       if: ${{ runner.os == 'Windows' }}
-    - run: build2-install-msvc-0.14.0.bat
+    - run: build2-install-msvc-${{ inputs.build2-version }}.bat
       shell: cmd
       working-directory: ${{ runner.temp }}/build2-build
       if: ${{ runner.os == 'Windows' }}
