--- a/action.yaml
+++ b/action.yaml
@@ -15,7 +15,7 @@ runs:
       shell: bash
       working-directory: ${{ runner.temp }}/build2-build
       if: ${{ runner.os != 'Windows' }}
-    - run: sudo sh build2-install-${{ inputs.build2-version }}.sh --yes
+    - run: sudo sh build2-install-${{ inputs.build2-version }}.sh --yes --trust "70:64:FE:E4:E0:F3:60:F1:B4:51:E1:FA:12:5C:E0:B3:DB:DF:96:33:39:B9:2E:E5:C2:68:63:4C:A6:47:39:43"
       shell: bash
       working-directory: ${{ runner.temp }}/build2-build
       if: ${{ runner.os != 'Windows' }}
