--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -8,9 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: Rookfighter/setup-build2@master
-  macOS:
+  MacOS:
     name: MacOS Latest
     runs-on: macos-latest
     steps:
     - uses: Rookfighter/setup-build2@master
-
+  Windows:
+    name: Windows Latest
+    runs-on: windows-latest
+    steps:
+    - uses: Rookfighter/setup-build2@master
