--- a/action.yaml
+++ b/action.yaml
@@ -23,8 +23,8 @@ runs:
     - run: New-Item -Path "${{ runner.temp }}\build2-build" -ItemType Directory
       shell: powershell
       if: ${{ runner.os == 'Windows' }}
-    - run: curl -Uri "https://download.build2.org/${{ inputs.build2-version }}/build2-install-msvc-${{ inputs.build2-version }}.bat" -OutFile "build2-install-msvc-${{ inputs.build2-version }}.bat"
-      shell: bash
+    - run: Invoke-WebRequest -Uri "https://download.build2.org/${{ inputs.build2-version }}/build2-install-msvc-${{ inputs.build2-version }}.bat" -OutFile "build2-install-msvc-${{ inputs.build2-version }}.bat"
+      shell: powershell
       working-directory: ${{ runner.temp }}\build2-build
       if: ${{ runner.os == 'Windows' }}
     - shell: powershell
