--- a/action.yaml
+++ b/action.yaml
@@ -33,9 +33,10 @@ runs:
       run: |
         $vswhere = "C:\Program Files (x86)\Microsoft Visual Studio\Installer\vswhere.exe"
         $vcvarspath = &$vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
-        Write-Output "vc tools located at: $vcvarspath"
+        Write-Output "Found vc tools: $vcvarspath"
         cmd.exe /c "call `"$vcvarspath\VC\Auxiliary\Build\vcvars64.bat`" && .\build2-install-msvc-${{ inputs.build2-version }}.bat --yes --trust `"70:64:FE:E4:E0:F3:60:F1:B4:51:E1:FA:12:5C:E0:B3:DB:DF:96:33:39:B9:2E:E5:C2:68:63:4C:A6:47:39:43`""
         
         $oldpath = (Get-ItemProperty -Path 'Registry::HKEY_LOCAL_MACHINE\System\CurrentControlSet\Control\Session Manager\Environment' -Name PATH).path
         $newpath = "$oldpath;C:\build2\bin"
+        Write-Output "Path: $newpath"
         Set-ItemProperty -Path 'Registry::HKEY_LOCAL_MACHINE\System\CurrentControlSet\Control\Session Manager\Environment' -Name PATH -Value $newpath
