--- a/action.yaml
+++ b/action.yaml
@@ -45,10 +45,14 @@ runs:
         Write-Output "Found vc tools: $vcvarspath"
         cmd.exe /c "call `"$vcvarspath\VC\Auxiliary\Build\vcvars64.bat`" && .\build2-install-msvc-${{ inputs.build2-version }}.bat --yes --trust `"70:64:FE:E4:E0:F3:60:F1:B4:51:E1:FA:12:5C:E0:B3:DB:DF:96:33:39:B9:2E:E5:C2:68:63:4C:A6:47:39:43`""
         
-        $oldpath = (Get-ItemProperty -Path 'Registry::HKEY_LOCAL_MACHINE\System\CurrentControlSet\Control\Session Manager\Environment' -Name PATH).path
+        $oldpath = $env:path
         $newpath = "$oldpath;C:\build2\bin"
-        Write-Output "Path: $newpath"
-        setx /M PATH "$newpath"
+        Write-Output "New Path: $newpath"
+        [Environment]::SetEnvironmentVariable("PATH", $newpath, [EnvironmentVariableTarget]::Machine)
+        Write-Output "Current Path: $env:path"
+    - run: echo "%PATH%"
+      shell: cmd
+      if: ${{ runner.os == 'Windows' }}
     - run: b --version
       shell: cmd
       if: ${{ runner.os == 'Windows' }}
