--- a/action.yaml
+++ b/action.yaml
@@ -44,8 +44,9 @@ runs:
         $vcvarspath = &$vswhere -latest -products * -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -property installationPath
         Write-Output "Found vc tools: $vcvarspath"
         cmd.exe /c "call `"$vcvarspath\VC\Auxiliary\Build\vcvars64.bat`" && .\build2-install-msvc-${{ inputs.build2-version }}.bat --yes --trust `"70:64:FE:E4:E0:F3:60:F1:B4:51:E1:FA:12:5C:E0:B3:DB:DF:96:33:39:B9:2E:E5:C2:68:63:4C:A6:47:39:43`""
-    - run: echo "C:\build2\bin" >> $GITHUB_PATH
-      if: ${{ runner.os == 'Windows' }}
+        Add-Content $env:GITHUB_PATH "C:\build2\bin"
+        $newpath = Get-Content $env:GITHUB_PATH
+        Write-Output $newpath
     - run: echo "%PATH%"
       shell: cmd
       if: ${{ runner.os == 'Windows' }}
